# distributed-systems

./: README.md
Akka/: build.sbt
Akka/database/: db1.json  db2.json
Akka/database/books/: Pride and Prejudice.txt
Akka/src/main/resources/: client.conf  server.conf
DistributedMap/: build.gradle  settings.gradle
GtkTokenRing/: CMakeLists.txt  TokenRingTCP.c  TokenRingTCP.h  TokenRingUDP.c  TokenRingUDP.h  builder.ui  config.c  config.h  main.c  makefile
Middleware/Bank/: build.sbt
Middleware/Bank/project/: plugin.sbt
Middleware/Bank/src/main/protobuf/: exchange.proto
Middleware/Client/: client.sh  rebar.config
Middleware/Client/src/: client.app.src  client_app.erl  client_serv.erl  client_sup.erl
Middleware/Client/thrift/: bank.thrift
RabbitHospital/: .gitignore  README.md  mix.exs  run_docker.sh
RabbitHospital/config/: config.exs
RabbitHospital/lib/: administrator.ex  doctor.ex  message.ex  rabbit_hospital.ex  technician.ex  worker.ex
RabbitHospital/test/: rabbit_hospital_test.exs
TCP-UDP_Sockets/: Logger.asm  Logger.py  run_asm.sh
TCP-UDP_Sockets/TokenRing/: TokenRing.c  TokenRing.h  TokenRingTCP.c  TokenRingTCP.h  config.c
TCP-UDP_Sockets/TokenRing++/: Client.cpp  Client.h  TcpClient.cpp  TcpClient.h  Token.cpp  Token.h  UdpClient.cpp  UdpClient.h  builder.ui  main.cpp  makefile
TokenRing/: Logger.py  TokenRing.c  TokenRing.h  TokenRingTCP.c  TokenRingTCP.h  TokenRingUDP.c  config.c  config.h  main.c  makefile
Zookeeper/: build.gradle  cmd.sh  docker-compose.yaml  settings.gradle
Zookeeper/src/main/resources/: log4j.properties
(+21 files in other folders)
